Use Files.writeString and Stream.toList in tests (#3697)
66 call sites across 12 test files, closing out the Java 17 modernization
of the test sources.

63 are Files.write(path, s.getBytes(StandardCharsets.UTF_8)) becoming
Files.writeString(path, s). All were the same shape - no open options, no
charset other than UTF-8 - and the charset argument was the only reason
these tests imported StandardCharsets at all. The earlier text-block
batches converted only the multi-line writes, so this finishes the file.
TestFileUtil.writeFile, the shared helper the whole suite builds fixture
files with, loses its charset plumbing too.

The other 3 are Collectors.toList() becoming Stream.toList(). Both are
Java 16, both were already available; the difference worth knowing is
that Stream.toList() is unmodifiable where Collectors.toList() returns a
mutable ArrayList. Nothing here mutates the result, and an attempt would
throw rather than pass quietly.

Records were considered and do not apply. Of 187 nested classes in the
test sources, 39 extend a class, which a record cannot do, and the rest
implement interfaces with behavior rather than carrying data. A record's
accessors are name() rather than getName(), so even the interface-shaped
stubs would need explicit methods and gain nothing. OSHI's actual data
carriers live in main sources at release 8, where records do not exist.

The three statement switches a survey still reported are already in arrow
form; the pattern that finds them matches both.